Added external JS with typewriter and scroll features

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="hero-content">
                 <div class="hero-text">
     <h1>Hi, I'm Utkarsha</h1>
-    <p>Frontend Web Developer</p>
+    <p>I am a <span class="typing-text" style="color: #ec0ba9; font-weight: bold;"></span><span class="cursor">|</span></p>
     <p style="font-size: 0.9em; opacity: 0.9; margin-top: 5px;">
         Building responsive, interactive websites with modern HTML, CSS, and JavaScript.
     </p>
@@ -290,9 +290,11 @@
 </div>
             
             <div class="copyright">
-                © Copyright <strong>Business</strong>. All Rights Reserved
+                <p>&copy; <span id="year"></span> Utkarsha. All rights reserved.</p>
             </div>
         </div>
     </footer>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">⬆️</button>
+    <script src="script.js"></script>
 </body>
 </html>
