Matched JS features to theme color

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="hero-content">
                 <div class="hero-text">
     <h1>Hi, I'm Utkarsha</h1>
-    <p>I am a <span class="typing-text" style="color: #ec0ba9; font-weight: bold;"></span><span class="cursor">|</span></p>
+    <p>I am a <span class="typing-text" style="color: #2980b9; font-weight: bold;"></span><span class="cursor">|</span></p>
     <p style="font-size: 0.9em; opacity: 0.9; margin-top: 5px;">
         Building responsive, interactive websites with modern HTML, CSS, and JavaScript.
     </p>
